Update portfolio layout and sidebar Improve portfolio UI and responsiveness Add sticky sidebar and smooth hover effects Refine profile section and social icons Enhance portfolio design Fix social media icon alignment Improve sidebar positioning Update portfolio styling

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@
      border:1px solid #3a3a3a;
      border-radius:16px;
      padding: 40px;
-
+     position: sticky;
+     top: 40px;
 
  }
  .main-content{
@@ -269,7 +270,7 @@
     height: 14px;
     background: #ffbf00;
     border-radius: 50%;
-    left: -8px;   /* dot ko line ke upar lane ke liye */
+    left: -8px;  
     top: 4px;
     z-index: 2;
 }
@@ -281,9 +282,51 @@
 }
 
 .project-container{
+    margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap:25px;
 
 
 }
+ .project{
+    background-color: #1e1e1e;
+    border-radius: 12px;
+    border: 1px solid #3a3a3a;
+    overflow: hidden;
+    transition: tranform 0.5s ease,box-shadow 0.5s ease;
+ }
+ .project:hover{
+    transform: translateY(-10px);
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3) ;
+ }
+
+
+
+.project img{
+    height: 180px;
+    width: 100%;
+    object-fit: cover;
+}
+.card{
+    padding: 20px;
+}
+.card h3{
+    color: #e0e0e0;
+
+}
+.card p{
+ color: #a0a0a0;
+ line-height: 1,6;
+ margin-bottom: 20px;
+ 
+
+}
+.card span{
+    background-color: rgba( 255 , 191, 0, 0, 1);
+    color: #ffbf00;
+    padding: 4px 8px ;
+    border-radius:  5px;
+    font-size: 0.75rem;
+    margin-right: 5px;
+}
+
